Fixed iframe widths, general responsive layout improvements.-

--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 <main class="grid404">
     <header class="header">
         <figure class="headerImage">
-            <img src="/absolutelyUnderstandGuitar/images/header.png" alt="headerImage" fetchpriority="high">
+            <img src="/absolutelyUnderstandGuitar/images/header.png" alt="headerImage" fetchpriority="high" width="1030" height="266">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -63,7 +63,7 @@
     <hr class="hr2">
     <footer class="footer">
         <a href="#top">
-            <img src="/absolutelyUnderstandGuitar/images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo">
+            <img src="/absolutelyUnderstandGuitar/images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" width="763" height="285">
         </a>
     </footer>
 </main>
