--- a/pages/program.html
+++ b/pages/program.html
@@ -18,7 +18,7 @@
 <main class="programGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="Header Image" fetchpriority="high">
+            <img src="../images/header.png" alt="Header Image" fetchpriority="high" width="1030" height="266">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -126,7 +126,7 @@
     <hr class="hr4">
     <footer class="footer">
         <a href="#top">
-            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000" width="763" height="285">
         </a>
     </footer>
 </main>
