--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -18,7 +18,7 @@
 <main class="scottyGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="Header Image" fetchpriority="high">
+            <img src="../images/header.png" alt="Header Image" fetchpriority="high" width="1030" height="266">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -42,7 +42,7 @@
         <hr class="headerHr">
     </header>
     <figure class="scottyI1" data-aos="zoom-in" data-aos-duration="1000">
-        <img src="../images/scotty1.jpg" alt="First Picture of Scotty">
+        <img src="../images/scotty1.jpg" alt="First Picture of Scotty" fetchpriority="high">
     </figure>
     <hr class="hr1">
     <section class="scottyT1">
@@ -63,22 +63,22 @@
     <div id="scottyCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
             <figure class="carousel-item active">
-                <img src="../images/carousel/caro1-1.jpg" class="d-block mx-auto" alt="First carousel image of Scotty">
+                <img src="../images/carousel/caro1-1.jpg" class="d-block mx-auto" fetchpriority="high" alt="First carousel image of Scotty" width="606" height="452">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro1-2.jpg" class="d-block mx-auto" alt="Second carousel image of Scotty">
+                <img src="../images/carousel/caro1-2.jpg" class="d-block mx-auto" alt="Second carousel image of Scotty" width="602" height="452">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro1-3.jpg" class="d-block mx-auto" alt="Third carousel image of Scotty">
+                <img src="../images/carousel/caro1-3.jpg" class="d-block mx-auto" alt="Third carousel image of Scotty" width="602" height="452">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro1-4.jpg" class="d-block mx-auto" alt="Fourth carousel image of Scotty">
+                <img src="../images/carousel/caro1-4.jpg" class="d-block mx-auto" alt="Fourth carousel image of Scotty" width="602" height="452">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro1-5.jpg" class="d-block mx-auto" alt="Fifth carousel image of Scotty">
+                <img src="../images/carousel/caro1-5.jpg" class="d-block mx-auto" alt="Fifth carousel image of Scotty" width="361" height="452">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro1-6.jpg" class="d-block mx-auto" alt="Sixth carousel image of Scotty">
+                <img src="../images/carousel/caro1-6.jpg" class="d-block mx-auto" alt="Sixth carousel image of Scotty" width="629" height="452">
             </figure>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#scottyCarousel" data-bs-slide="prev" aria-label="Carousel Previous Button">
@@ -105,7 +105,7 @@
     <hr class="hr5">
     <footer class="footer">
         <a href="#top">
-            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000" width="763" height="285">
         </a>
     </footer>
 </main>
