--- a/pages/videos.html
+++ b/pages/videos.html
@@ -18,7 +18,7 @@
 <main class="videosGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="../images/header.png" alt="Header Image" fetchpriority="high">
+            <img src="../images/header.png" alt="Header Image" fetchpriority="high" width="1030" height="266">
         </figure>
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -51,7 +51,6 @@
             src="https://www.youtube.com/embed/Gg1L-sBIxnY?si=WuWY-ICSXA8TsnHe"
             title="The Absolutely Understand Guitar Video Series"
             frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
         </iframe>
     </div>
@@ -66,7 +65,6 @@
             src="https://www.youtube.com/embed/erelNRRYXUA?si=_ry3L4LYculn0AaP"
             title="The AUG Ear Training Series"
             frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen>
         </iframe>
     </div>
@@ -81,14 +79,13 @@
                 src="https://www.youtube.com/embed/sbQEQHQ5HX4?si=xyl2xAsaOxEAunVO"
                 title="Some of Scotty's playing with The Experimental Ensemble of Cape Cod!"
                 frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 allowfullscreen>
         </iframe>
     </div>
     <hr class="hr3">
     <footer class="footer">
         <a href="#top">
-            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000" width="763" height="285">
         </a>
     </footer>
 </main>
