--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <main class="indexGrid">
     <header class="header">
         <figure class="headerImage">
-            <img src="./images/header.png" alt="headerImage" fetchpriority="high">
+            <img src="./images/header.png" alt="headerImage" fetchpriority="high" width="1030" height="266">
         </figure>        
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
@@ -43,7 +43,7 @@
     </header>
     <section class="mainGrid">
         <figure class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1200">
-            <img class="scottyImg img-fluid" src="./images/indexScotty.jpg" alt="ScottyWest">
+            <img class="scottyImg" src="./images/indexScotty.jpg" alt="ScottyWest" height="800" width="700">
         </figure>
         <h2 class="titleContainer container-fluid" data-aos="zoom-in" data-aos-duration="1200">
             WELCOME TO THE BEST GUITAR<br>LESSONS PROGRAM!
@@ -81,7 +81,7 @@
     <footer class="footer">
         <figure>
             <a href="#top">
-                <img src="./images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000">
+                <img src="./images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000" width="763" height="285">
             </a>
         </figure>
     </footer>
