--- a/pages/program.html
+++ b/pages/program.html
@@ -44,22 +44,19 @@
     <div id="programCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
             <figure class="carousel-item active">
-                <img src="../images/carousel/caro2-1.jpg" class="d-block mx-auto" fetchpriority="high" alt="First carousel image of the AUG program">
+                <img src="../images/carousel/caro2-1.jpg" class="d-block mx-auto" fetchpriority="high" alt="First carousel image of the AUG program" width="550" height="500">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro2-2.jpg" class="d-block mx-auto" alt="Second carousel image of the AUG program">
+                <img src="../images/carousel/caro2-2.jpg" class="d-block mx-auto" alt="Second carousel image of the AUG program" width="483" height="500">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro2-3.jpg" class="d-block mx-auto" alt="Third carousel image of the AUG program">
+                <img src="../images/carousel/caro2-3.jpg" class="d-block mx-auto" alt="Third carousel image of the AUG program" width="578" height="500">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro2-4.jpg" class="d-block mx-auto" alt="Fourth carousel image of the AUG program">
+                <img src="../images/carousel/caro2-4.jpg" class="d-block mx-auto" alt="Fourth carousel image of the AUG program" width="605" height="500">
             </figure>
             <figure class="carousel-item">
-                <img src="../images/carousel/caro2-5.jpg" class="d-block mx-auto" alt="Fifth carousel image of the AUG program">
-            </figure>
-            <figure class="carousel-item">
-                <img src="../images/carousel/caro2-6.jpg" class="d-block mx-auto" alt="Sixth carousel image of the AUG program">
+                <img src="../images/carousel/caro2-5.jpg" class="d-block mx-auto" alt="Fifth carousel image of the AUG program" width="608" height="500">
             </figure>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#programCarousel" data-bs-slide="prev" aria-label="Carousel Previous Button">
