--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
     <hr class="hr1">
     <figure class="scotty404">
         <a href="/absolutelyUnderstandGuitar/index.html">
-            <img src="/absolutelyUnderstandGuitar/images/scotty404.jpg" alt="Scotty's Page Not Found face!">
+            <img src="/absolutelyUnderstandGuitar/images/scotty404.jpg" alt="Scotty's Page Not Found face!" width="289" height="296">
         </a>
     </figure>
     <article class="caption404">
