--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
     </h2>
     <hr class="hr1">
     <div class="aboutBanner" data-aos="zoom-in" data-aos-duration="1000">
-        <img src="../images/banner.jpg" class="img-fluid" alt="Scotty Banner">
+        <img src="../images/banner.jpg" class="img-fluid" alt="Scotty Banner" width="1143" height="186">
     </div>
     <hr class="hr2">
     <div class="aboutTexto1" data-aos="fade-up" data-aos-duration="1500">
@@ -62,7 +62,7 @@
     </div>
     <hr class="hr4">
     <figure class="aboutFoto2" data-aos="zoom-in" data-aos-duration="1000">
-        <img src="../images/scotty3.jpg" class="img-fluid" alt="Picture of Scotty" loading="lazy">
+        <img src="../images/scotty3.jpg" class="img-fluid" alt="Picture of Scotty" loading="lazy" width="516" height="371">
     </figure>
     <hr class="hr5">
     <footer class="footer">
