Adding headers to scotty.html.-

--- a/pages/program.html
+++ b/pages/program.html
@@ -70,8 +70,9 @@
     </div>
     <hr class="hr2">
     <section class="programText">
+        <h2 data-aos="fade-up" data-aos-duration="1500">Scotty's famous <b class="text-warning">color-coded guitar scale and chord fingering charts</b> are much better than those old, black-and-white finger charts.</h2> 
         <p data-aos="fade-up" data-aos-duration="1500">
-            Scotty's famous <b class="text-warning">color-coded guitar scale and chord fingering charts</b> are much better than those old, black-and-white finger charts. They tell you <b>much more</b> than just where to position your fingers. They show you <i>how each note functions</i> in the scale or chord it is in, and how it works with other scales and chords in a song. This is <b>critical</b> for lead guitarists and folks interested in song writing and improvising.
+            They tell you <b>much more</b> than just where to position your fingers. They show you <i>how each note functions</i> in the scale or chord it is in, and how it works with other scales and chords in a song. This is <b>critical</b> for lead guitarists and folks interested in song writing and improvising.
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
