--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -46,8 +46,11 @@
     </figure>
     <hr class="hr1">
     <section class="scottyT1">
+        <h2 data-aos="fade-up" data-aos-duration="1500">
+            <b>"I never really set out to be a music teacher...</b>
+        </h2>
         <p data-aos="fade-up" data-aos-duration="1500">
-            "I never really set out to be a music teacher. My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964, when I was 10. <b class="text-warning">The Beatles</b> had just arrived in America - and I just <u class="fst-italic">had</u> to learn to play the guitar! From the beginning, I was the kid who <b>*had*</b> to know. 
+            My mother, a symphony violinist, started me with piano lessons when I was 6 years old. I began to learn to play the guitar in 1964, when I was 10. <b class="text-warning">The Beatles</b> had just arrived in America - and I just <u class="fst-italic">had</u> to learn to play the guitar! From the beginning, I was the kid who <b>*had*</b> to know. 
         </p>
         <p data-aos="fade-up" data-aos-duration="1500">
             My piano lessons had shown me that there was <b class="text-danger">a system to the way music worked,</b> and I knew that if I wanted to learn to play guitar, <b>I would have to understand that system.</b> I wanted to write my own songs... play by ear... jam and improvise like the Beatles... but neither my private teachers or the public school music programs <i>taught</i> that stuff!
@@ -55,8 +58,11 @@
     </section>
     <hr class="hr2">
     <section class="scottyT2">
+        <h2 data-aos="fade-up" data-aos-duration="1500">
+            <b>...I tried to learn to play guitar myself.</b>
+        </h2>
         <p data-aos="fade-up" data-aos-duration="1500">
-            ...I tried to learn to play guitar myself. My friends would show me some chords and scales. The books I would try to read were often <b>scattered</b> and <b>confusing.</b> My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no <b class="text-warning">program</b> to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day... Hendrix, Dylan, The Beatles... Everyone thought I was this <i>hot-shot guitar player</i>, but I knew I was only faking it. I didn't have <b class="text-danger">"The BIG Picture"</b> yet.
+            My friends would show me some chords and scales. The books I would try to read were often <b>scattered</b> and <b>confusing.</b> My music instructors didn't seem to know the answers. It's difficult to learn to play the guitar if there's no <b class="text-warning">program</b> to follow. Even so, everyone thought I was this hot guitar player. I could play the popular songs of the day... Hendrix, Dylan, The Beatles... Everyone thought I was this <i>hot-shot guitar player</i>, but I knew I was only faking it. I didn't have <b class="text-danger">"The BIG Picture"</b> yet.
         </p>
     </section>
     <hr class="hr3">
@@ -92,8 +98,11 @@
     </div>
     <hr class="hr4">
     <section class="scottyT3">
+        <h2 data-aos="fade-up" data-aos-duration="1500">
+            <b>...Then one summer, my luck changed.</b>
+        </h2>
         <p data-aos="fade-up" data-aos-duration="1500">
-            Then one summer, my luck changed. A new roommate named <b class="text-warning">Dan May</b> moved in with us. Dan was one of those <b>true musical prodigies</b> you hear about: played the piano before he could walk... masters degree in music composition at age 22... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan <b>understood music inside out.</b> He actually knew the answers to all the questions that I had been asking all those years! I would slap myself on the forehead and ask "Why didn't my other music teachers show me <b class="text-danger">this stuff</b> when I was a kid?!"
+            A new roommate named <b class="text-warning">Dan May</b> moved in with us. Dan was one of those <b>true musical prodigies</b> you hear about: played the piano before he could walk... masters degree in music composition at age 22... totally knowledgeable about guitar music theory and good at explaining it clearly and logically. Dan <b>understood music inside out.</b> He actually knew the answers to all the questions that I had been asking all those years! I would slap myself on the forehead and ask "Why didn't my other music teachers show me <b class="text-danger">this stuff</b> when I was a kid?!"
         </p>
         <p data-aos="fade-up" data-aos-duration="1500">
             Dan showed me that learning to play the guitar is easy - if you can find someone to explain it to you <u class="fw-bold">the right way.</u>
