--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -46,7 +46,7 @@
     </figure>
     <hr class="hr1">
     <section class="scottyT1">
-        <h2 data-aos="fade-up" data-aos-duration="1500">
+        <h2 class="scottyH2" data-aos="fade-up" data-aos-duration="1500">
             <b>"I never really set out to be a music teacher...</b>
         </h2>
         <p data-aos="fade-up" data-aos-duration="1500">
@@ -58,7 +58,7 @@
     </section>
     <hr class="hr2">
     <section class="scottyT2">
-        <h2 data-aos="fade-up" data-aos-duration="1500">
+        <h2 class="scottyH2" data-aos="fade-up" data-aos-duration="1500">
             <b>...I tried to learn to play guitar myself.</b>
         </h2>
         <p data-aos="fade-up" data-aos-duration="1500">
@@ -98,7 +98,7 @@
     </div>
     <hr class="hr4">
     <section class="scottyT3">
-        <h2 data-aos="fade-up" data-aos-duration="1500">
+        <h2 class="scottyH2" data-aos="fade-up" data-aos-duration="1500">
             <b>...Then one summer, my luck changed.</b>
         </h2>
         <p data-aos="fade-up" data-aos-duration="1500">
