--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
     <header class="header">
         <figure class="headerImage">
             <img src="../images/header.png" alt="Header Image" fetchpriority="high" width="1030" height="266">
-        </figure>        
+        </figure>  
         <h1>Absolutely Understand Guitar</h1>
         <h2>A Fan Tribute Page</h2>
         <hr class="headerHr">
@@ -41,30 +41,37 @@
         <hr class="headerHr">    
     </header>
     <h2 class="aboutTitle" data-aos="zoom-in" data-aos-duration="1000">
-            The Most Comprehensive and Well-Organized <br> Guitar Instruction Program Available <u>Anywhere!</u>
+        The Most Comprehensive<br>and Well-Organized<br>Guitar Instruction Program<br>Available <u>Anywhere!</u>
     </h2>
     <hr class="hr1">
     <div class="aboutBanner" data-aos="zoom-in" data-aos-duration="1000">
         <img src="../images/banner.jpg" class="img-fluid" alt="Scotty Banner" width="1143" height="186">
     </div>
     <hr class="hr2">
-    <div class="aboutTexto1" data-aos="fade-up" data-aos-duration="1500">
-        <p>
-            Look at all you get with our <span class="text-warning fw-bold">video guitar instruction package</span>!
-            Scotty's guitar instruction videos teach you to actually <span class="fw-bold">"think"</span> on your guitar. If a picture is worth a thousand words, these 32-1 hour-long guitar instruction videos are absolutely <span class="text-danger fw-bold fst-italic">priceless</span>! Close-ups of guitar chord and scale finger positions, multiple camera angles and large, easy-to-read graphics make Scotty's visual method of guitar instruction <span class="fw-bold">unbeatable</span>.
+    <section class="aboutTexto" data-aos="fade-up" data-aos-duration="1500">
+        <h2 data-aos="fade-up" data-aos-duration="1500">
+            <span>
+            Look at all you get with our <b class="text-warning">video guitar instruction package!</b>
+            </span>
+        </h2>
+        <p data-aos="fade-up" data-aos-duration="1500">
+            Scotty's guitar instruction videos teach you to actually <b>"think"</b> on your guitar. If a picture is worth a thousand words, these 32-1 hour-long guitar instruction videos are absolutely <i class="text-danger fw-bold">priceless!</i> Close-ups of guitar chord and scale finger positions, multiple camera angles and large, easy-to-read graphics make Scotty's visual method of guitar instruction <b>unbeatable.</b>
         </p>
-    </div>
+        <hr>
+        <h2 class="aboutH2" data-aos="fade-up" data-aos-duration="1500">
+            <span>
+            Scotty's <b class="text-warning">"music as language"</b> approach to guitar instruction is the key.
+            </span>
+        </h2>
+        <p data-aos="fade-up" data-aos-duration="1500">
+            You understand guitar better when Scotty shows you how to <i>do it</i> - and then explains how it all <i>works</i>, right there on your screen! It's like having <b class="text-danger fst-italic">world-class private guitar instruction,</b> right in your own home.
+        </p>
+    </section>
     <hr class="hr3">
-    <div class="aboutTexto2" data-aos="fade-up" data-aos-duration="1500">
-        <p>
-            Scotty's <span class="text-warning fw-bold">"music as language"</span> approach to guitar instruction is the key. You understand guitar better when Scotty shows you how to <span class="fst-italic">do it</span> - and then explains how it all <span class="fst-italic">works</span>, right there on your screen! It's like having <span class="text-danger fw-bold fst-italic">world-class private guitar instruction</span>, right in your own home.
-        </p>
-    </div>
-    <hr class="hr4">
     <figure class="aboutFoto2" data-aos="zoom-in" data-aos-duration="1000">
         <img src="../images/scotty3.jpg" class="img-fluid" alt="Picture of Scotty" loading="lazy" width="516" height="371">
     </figure>
-    <hr class="hr5">
+    <hr class="hr4">
     <footer class="footer">
         <a href="#top">
             <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000" width="763" height="285">
