--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
                 <div class="container-fluid">
                     <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/index.html">Home</a>
-                        <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/about.html"">About</a>
+                        <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/about.html">About</a>
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/videos.html">Videos</a>
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/program.html">Program</a>
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/scotty.html">About Scotty</a>
