--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
     <hr class="hr1">
     <section class="indexTexto2 container-fluid">
         <p data-aos="fade-up" data-aos-duration="1500">
-            There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for a while, but it's not likely to keep you satisfied for the long haul. My <b class="text-warning">"music as language"</b> approach to guitar lessons will allow you to easily answer questions many of you have had for <i>years</i> and get you on the true path to  <u>creative fulfillment.</u>
+            There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for a while, but it's not likely to keep you satisfied for the long haul.
         </p>
+        <h2 data-aos="fade-up" data-aos-duration="1500">My <b class="text-warning">"music as language"</b> approach to guitar lessons will allow you to easily answer questions many of you have had for <i>years</i> and get you on the true path to  <u>creative fulfillment.</u>
+        </h2>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
             Some guitar lessons have you jumping around, sampling this-and-that, so you end up with a <i>scattered vision</i> of how music works. Our video guitar lessons are different - they're designed to be viewed <b>in order,</b> so each concept flows into the next. You could learn how to play guitar as well as, or even better than, your favorite guitar heroes. You'll finally be able to actually <b>"think" on your instrument</b>... learn songs by ear... write your own music... and solo with <b class="text-danger">power and passion!</b> It's easy if you get it explained to you in <b>the right way.</b>
