--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarContent">
                 <div class="container-fluid">
-                    <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                    <div class="navbar-nav">
                         <a class="nav-item nav-link" href="#top">Home</a>
                         <a class="nav-item nav-link" href="./pages/about.html">About</a>
                         <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
@@ -42,9 +42,10 @@
         <hr class="headerHr">
     </header>
     <section class="mainGrid">
-        <figure class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1200">
+        <picture class="indexImagen container-fluid" data-aos="zoom-in" data-aos-duration="1200">
+            <source srcset="./images/indexScotty.webp" type="image/webp" height="800" width="700"/>
             <img class="scottyImg" src="./images/indexScotty.jpg" alt="ScottyWest" height="800" width="700">
-        </figure>
+        </picture>
         <h2 class="titleContainer container-fluid" data-aos="zoom-in" data-aos-duration="1200">
             WELCOME TO THE BEST GUITAR<br>LESSONS PROGRAM!
         </h2>
@@ -74,9 +75,8 @@
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-        Watch Scotty's <b class="text-warning">free video guitar lessons</b> - you'll be amazed at <b class="text-danger">HOW MUCH YOU WILL LEARN!</b>
-
-            You can reach Scotty's main webpage at: <a href="https://www.absolutelyunderstandguitar.com" target="_blank">https://www.absolutelyunderstandguitar.com</a> or visit him on <a href="https://www.facebook.com/AbsolutelyUnderstandGuitar" target="_blank">facebook.</a>
+            Watch Scotty's <b class="text-warning">free video guitar lessons</b> - you'll be amazed at <b class="text-danger">HOW MUCH YOU WILL LEARN!</b> You can reach Scotty's main webpage at:
+            <a href="https://www.absolutelyunderstandguitar.com" target="_blank">https://www.absolutelyunderstandguitar.com</a> or visit him on <a href="https://www.facebook.com/AbsolutelyUnderstandGuitar" target="_blank">facebook.</a>
         </p>
     </section>
     <hr class="hr2">
