--- a/pages/about.html
+++ b/pages/about.html
@@ -73,9 +73,11 @@
     </figure>
     <hr class="hr4">
     <footer class="footer">
-        <a href="#top">
-            <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" loading="lazy" data-aos="zoom-in" data-aos-duration="2000" width="763" height="285">
-        </a>
+        <figure>
+            <a href="#top">
+                <img src="../images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" data-aos="zoom-in" data-aos-duration="2000" width="763" height="285">
+            </a>
+        </figure>
     </footer>
 </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
