--- a/pages/about.html
+++ b/pages/about.html
@@ -28,12 +28,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarContent">
                 <div class="container-fluid">
-                    <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                    <div class="navbar-nav">
                             <a class="nav-item nav-link" href="../index.html">Home</a>
                             <a class="nav-item nav-link" href="about.html">About</a>
                             <a class="nav-item nav-link" href="videos.html">Videos</a>
                             <a class="nav-item nav-link" href="program.html">Program</a>
                             <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
+                            <a class="nav-item nav-link" href="contact.html">Contact</a>
                     </div>
                 </div>
             </div>
