--- a/404.html
+++ b/404.html
@@ -29,12 +29,13 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarContent">
                 <div class="container-fluid">
-                    <div class="navbar-nav d-flex flex-row justify-content-center gap-5 p-2 m-2">
+                    <div class="navbar-nav">
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/index.html">Home</a>
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/about.html">About</a>
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/videos.html">Videos</a>
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/program.html">Program</a>
                         <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/scotty.html">About Scotty</a>
+                        <a class="nav-item nav-link" href="/absolutelyUnderstandGuitar/pages/contact.html">Contact</a>
                     </div>
                 </div>
             </div>
