--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                         <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
                         <a class="nav-item nav-link" href="./pages/program.html">Program</a>
                         <a class="nav-item nav-link" href="./pages/scotty.html">About Scotty</a>
+                        <a class="nav-item nav-link" href="./pages/contact.html">Contact</a>
                     </div>
                 </div>
             </div>
