--- a/pages/about.html
+++ b/pages/about.html
@@ -23,8 +23,10 @@
         <h2>A Fan Tribute Page</h2>
         <hr class="headerHr">
         <nav class="navbar navbar-expand-lg">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+            <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon">
+                    <span></span>
+                </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarContent">
                 <div class="container-fluid">
