--- a/pages/contact.html
+++ b/pages/contact.html
@@ -25,7 +25,9 @@
         <hr class="headerHr">
         <nav class="navbar navbar-expand-lg">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon">
+                    <span></span>
+                </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarContent">
                 <div class="container-fluid">
