--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse" id="navbarContent">
                 <div class="container-fluid">
                     <div class="navbar-nav">
-                        <a class="nav-item nav-link" href="#top">Home</a>
+                        <a class="nav-item nav-link active" aria-current="page" href="#top">Home</a>
                         <a class="nav-item nav-link" href="./pages/about.html">About</a>
                         <a class="nav-item nav-link" href="./pages/videos.html">Videos</a>
                         <a class="nav-item nav-link" href="./pages/program.html">Program</a>
