--- a/pages/about.html
+++ b/pages/about.html
@@ -32,7 +32,7 @@
                 <div class="container-fluid">
                     <div class="navbar-nav">
                             <a class="nav-item nav-link" href="../index.html">Home</a>
-                            <a class="nav-item nav-link" href="about.html">About</a>
+                            <a class="nav-item nav-link active" aria-current="page" href="about.html">About</a>
                             <a class="nav-item nav-link" href="videos.html">Videos</a>
                             <a class="nav-item nav-link" href="program.html">Program</a>
                             <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
@@ -58,7 +58,7 @@
             </span>
         </h2>
         <p data-aos="fade-up" data-aos-duration="1500">
-            Scotty's guitar instruction videos teach you to actually <b>"think"</b> on your guitar. If a picture is worth a thousand words, these 32-1 hour-long guitar instruction videos are absolutely <i class="text-danger fw-bold">priceless!</i> Close-ups of guitar chord and scale finger positions, multiple camera angles and large, easy-to-read graphics make Scotty's visual method of guitar instruction <b>unbeatable.</b>
+            Scotty's guitar instruction videos teach you to actually <b>"think"</b> on your guitar. If a picture is worth a thousand words, these 32 one hour-long guitar instruction videos are absolutely <i class="text-danger fw-bold">priceless!</i> Close-ups of guitar chord and scale finger positions, multiple camera angles and large, easy-to-read graphics make Scotty's visual method of guitar instruction <b>unbeatable.</b>
         </p>
         <hr>
         <h2 class="aboutH2" data-aos="fade-up" data-aos-duration="1500">
@@ -67,7 +67,7 @@
             </span>
         </h2>
         <p data-aos="fade-up" data-aos-duration="1500">
-            You understand guitar better when Scotty shows you how to <i>do it</i> - and then explains how it all <i>works</i>, right there on your screen! It's like having <b class="text-danger fst-italic">world-class private guitar instruction,</b> right in your own home.
+            You understand guitar better when Scotty shows you how to <i>do it</i> - and then explains <i></i>how it all works</i>, right there on your screen! It's like having <b class="text-danger fst-italic">world-class private guitar instruction,</b> right in your own home.
         </p>
     </section>
     <hr class="hr3">
