--- a/pages/contact.html
+++ b/pages/contact.html
@@ -37,7 +37,7 @@
                             <a class="nav-item nav-link" href="videos.html">Videos</a>
                             <a class="nav-item nav-link" href="program.html">Program</a>
                             <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
-                            <a class="nav-item nav-link" href="contact.html">Contact</a>
+                            <a class="nav-item nav-link active" aria-current="page" href="contact.html">Contact</a>
                     </div>
                 </div>
             </div>
@@ -49,7 +49,7 @@
             Like what you've seen so far?<br>Ready to begin your journey towards <b class="text-warning">"The Big Picture"</b>?
         </h2>
         <h3>
-            Please fill out this form, and we'll reach out to you!
+            Fill out this form, and we'll reach out to you!
         </h3>
     </section>
     <div class="formContainer">
