--- a/pages/program.html
+++ b/pages/program.html
@@ -35,7 +35,7 @@
                             <a class="nav-item nav-link" href="../index.html">Home</a>
                             <a class="nav-item nav-link" href="about.html">About</a>
                             <a class="nav-item nav-link" href="videos.html">Videos</a>
-                            <a class="nav-item nav-link" href="program.html">Program</a>
+                            <a class="nav-item nav-link active" aria-current="page" href="program.html">Program</a>
                             <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
                             <a class="nav-item nav-link" href="contact.html">Contact</a>
                     </div>
@@ -83,7 +83,7 @@
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
-            The <b class="text-warning">official course handbook</b> complements and re-enforces the video guitar lessons, making memorization and review of material a <i>snap.</i> All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are reprinted in your book, so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a <u class="text-danger font-monospace fst-italic">professional graphic artist,</u> these charts and illustrations are <b>simple</b> to read and understand.
+            The <b class="text-warning">official course handbook</b> complements and re-enforces the video guitar lessons, making memorization and review of material a <i>snap.</i> All the guitar finger charts and graphics that Scotty shows you in the DVD guitar lessons are re-printed in your book, so you can study them up close while viewing the video guitar lessons on your TV or PC. Created by a <i class="text-danger font-monospace">professional graphic artist,</i> these charts and illustrations are <u>simple</u> to read and understand.
         </p>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
