--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project. We are in the 404 webpage - broken link!">
-    <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
+    <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music, 404">
     <title>404! - AUG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -17,11 +17,6 @@
 <body>
 <main class="grid404">
     <header class="header">
-        <figure class="headerImage">
-            <img src="/absolutelyUnderstandGuitar/images/header.png" alt="headerImage" fetchpriority="high" width="1030" height="266">
-        </figure>
-        <h1>Absolutely Understand Guitar</h1>
-        <h2>A Fan Tribute Page</h2>
         <hr class="headerHr">
         <nav class="navbar navbar-expand-lg">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,7 +60,7 @@
     </article>
     <hr class="hr2">
     <footer class="footer">
-        <a href="#top">
+        <a href="/absolutelyUnderstandGuitar/index.html">
             <img src="/absolutelyUnderstandGuitar/images/footerLogo.png" alt="Footer Logo - Go To Top" class="footerLogo" width="763" height="285">
         </a>
     </footer>
