--- a/pages/videos.html
+++ b/pages/videos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Absolutely Understand Guitar is a program created by Scotty West and aimed at guitar players and musicians of all levels who wish to expand their knowledge and abilities of music theory and guitar playing. This is a fan made page of the project. Here are some videos of Scotty and his teaching.">
-    <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music">
+    <meta name="keywords" content="Absolutely, Understand, Guitar, Playing, Scotty West, Music, Videos">
     <title>Videos - AUG</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -34,7 +34,7 @@
                     <div class="navbar-nav">
                             <a class="nav-item nav-link" href="../index.html">Home</a>
                             <a class="nav-item nav-link" href="about.html">About</a>
-                            <a class="nav-item nav-link" href="videos.html">Videos</a>
+                            <a class="nav-item nav-link active" aria-current="page" href="videos.html">Videos</a>
                             <a class="nav-item nav-link" href="program.html">Program</a>
                             <a class="nav-item nav-link" href="scotty.html">About Scotty</a>
                             <a class="nav-item nav-link" href="contact.html">Contact</a>
