--- a/pages/contact.html
+++ b/pages/contact.html
@@ -72,7 +72,7 @@
         </div>
         <div class="contactDisclaimer" id="disclaimer">
             <span>
-                *Please note that this fan-made project has no authority to sign you up to the Absolutely Understand Guitar program course. You can visit Scotty's main website at: <a href="https://www.absolutelyunderstandguitar.com" target="_blank">https://www.absolutelyunderstandguitar.com</a> instead!
+                *Please note that this fan-made project has no authority to actually sign you up to the Absolutely Understand Guitar program course. You can visit Scotty's main website at: <a href="https://www.absolutelyunderstandguitar.com" target="_blank">https://www.absolutelyunderstandguitar.com</a> instead!
             </span>
         </div>
     </div>
