--- a/404.html
+++ b/404.html
@@ -51,11 +51,12 @@
     <article class="caption404">
         <p>
             Scotty's searching for that page of yours...<br>
-            ....Any minute now....<br>
+            .... ....<br>
+            ...any minute now .... ...<br>
             ... .... ...<br>
             ... ...<br>
             ... .... ...<br>
-            .....you're still here?!
+            ......you're still here?!
         </p>
     </article>
     <hr class="hr2">
