--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <p data-aos="fade-up" data-aos-duration="1500">
             There are thousands of guitar lessons out there that will show you how to place your fingers to play specific songs. You may find this fun for a while, but it's not likely to keep you satisfied for the long haul.
         </p>
-        <h2 data-aos="fade-up" data-aos-duration="1500">My <b class="text-warning">"music as language"</b> approach to guitar lessons will allow you to easily answer questions many of you have had for <i>years</i> and get you on the true path to  <u>creative fulfillment.</u>
+        <h2 data-aos="fade-up" data-aos-duration="1500">My <b class="text-warning">"music as language"</b> approach to guitar lessons will allow you to easily answer questions many of you have had for <i>years,</i> and get you on the true path to  <u>creative fulfillment.</u>
         </h2>
         <hr>
         <p data-aos="fade-up" data-aos-duration="1500">
