--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,12 +62,14 @@
                 <div>
                     <label for="exampleFormControlTextarea1" class="form-label">Who is your favorite musician?</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
+                </div> 
+                <div class="formCheck d-flex justify-content-between align-items-center">
+                    <div class="d-inline-flex align-items-center">
+                        <input type="checkbox" class="form-check-input" id="Check1" required>
+                        <label class="form-check-label ms-2" for="Check1">Confirm a desire for awesome guitar playing!</label>
+                    </div>
+                    <button type="submit" class="btn btn-outline-warning">Submit</button>
                 </div>
-                <div class="form-check">
-                    <input type="checkbox" class="form-check-input" id="Check1" required>
-                    <label class="form-check-label" for="Check1">Confirm a desire for awesome guitar playing!</label>
-                </div>
-                <button type="submit" class="btn btn-outline-warning">Submit</button>
             </form>
         </div>
         <div class="contactDisclaimer" id="disclaimer">
