--- a/pages/program.html
+++ b/pages/program.html
@@ -44,7 +44,7 @@
         </nav>
         <hr class="headerHr">
     </header>
-    <div id="programCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000" data-aos="zoom-in" data-aos-duration="1000">
+    <div id="programCarousel" class="carousel slide" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
             <figure class="carousel-item active">
                 <img src="../images/carousel/caro2-1.jpg" class="d-block mx-auto" fetchpriority="high" alt="First carousel image of the AUG program" width="550" height="500">
