--- a/pages/scotty.html
+++ b/pages/scotty.html
@@ -69,7 +69,7 @@
         </p>
     </section>
     <hr class="hr3">
-    <div id="scottyCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6000" data-aos="zoom-in" data-aos-duration="1000">
+    <div id="scottyCarousel" class="carousel slide" data-aos="zoom-in" data-aos-duration="1000">
         <div class="carousel-inner">
             <figure class="carousel-item active">
                 <img src="../images/carousel/caro1-1.jpg" class="d-block mx-auto" fetchpriority="high" alt="First carousel image of Scotty" width="606" height="452">
