--- a/pages/contact.html
+++ b/pages/contact.html
@@ -45,14 +45,14 @@
         <hr class="headerHr">
     </header>
     <section class="contactText">
-        <h2>
+        <h2 data-aos="fade-up" data-aos-duration="1500">
             Like what you've seen so far?<br>Ready to begin your journey towards <b class="text-warning">"The Big Picture"</b>?
         </h2>
-        <h3>
+        <h3 data-aos="fade-up" data-aos-duration="1500">
             Fill out this form, and we'll reach out to you!
         </h3>
     </section>
-    <div class="formContainer">
+    <div class="formContainer" data-aos="fade-up" data-aos-duration="1500">
         <div class="contactForm" id="contactForm">
             <form>
                 <div>
