--- a/pages/contact.html
+++ b/pages/contact.html
@@ -60,7 +60,7 @@
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-label="emailField" required>
                 </div>
                 <div>
-                    <label for="exampleFormControlTextarea1" class="form-label">Who is your favorite musician?</label>
+                    <label for="exampleFormControlTextarea1" class="form-label">Who is your favorite musician, and why?</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
                 </div> 
                 <div class="formCheck d-flex justify-content-between align-items-center">
